@@ -1,6 +1,10 @@
 MGP v 1.12.4 5/30/25
 -------------------
-  * fixed getTestNumbers() to only look for billable IgG tests 
+  * fixed getTestNumbers() to only look for billable IgG tests
+  * added patient ITL to log before execute MGP starts - in case failure occurs during typing, it'll be captured in Splunk
+  * added tryCatch during getTyping + a reactive for assessing if there was an exception during that block. if yes, output
+  error message and enable download log instead of allowing app to crash
+  * removed extraneous textOutput('p_itl') in ui.R
 
 MGP v 1.12.3 3/25/25
 -------------------
